--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
     <main>
         <section id="about" class="About">
             <div class="container__about">
-                <img src="img/profiler.png" alt="" class="About__img">
-                <!-- <h1 class="About__title">¿Quién soy?</h1> -->
+                <img src="img/profilecv.jpg" alt="" class="About__img">
                 <p class="About__description"><span>Mi nombre es Rodrigo Pérez, soy de Buenos Aires, Argentina.</span><br>
-                    Me encuentro en constante formación, mejorando mis capacidades. Soy un apasionado de la programación, el desarrollo y diseño web, con ganas de aprender y superar nuevos desafíos.
+                    Soy un apasionado de la programación, el desarrollo y el diseño web, con ganas de aprender y superar nuevos desafíos. Me encuentro en constante formación con interés en aprender nuevas tecnologías. 
                     Realicé cursos en EducacionIT, de los cuales se pueden ver los certificados debajo.
                     
                 </p>
