--- a/certificates.html
+++ b/certificates.html
@@ -26,48 +26,59 @@
             <div class="container_cert">
                 <div class="Study-bg">
                     <a href="#image1" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certhtml.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image2" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certcss.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image3" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certjs.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image4" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certreact.png" alt="">
+                    </a>
+                </div>
+                <div class="Study-bg">
+                    <a href="#image5" class="Study__certificate">
+                        <img src="img/certnode.png" alt="">
                     </a>
                 </div>
             </div>
         </section>
 
         <article class="light-box" id="image1">
-            <img src="img/certificado.png" alt="">
-            <a href="#image4" class="next"><i class="fas fa-chevron-circle-left"></i></a>
+            <img src="img/certhtml.png" alt="">
+            <a href="#image5" class="next"><i class="fas fa-chevron-circle-left"></i></a>
             <a href="#image2" class="next"><i class="fas fa-chevron-circle-right"></i></a>
             <a href="#study" class="close"><i class="fas fa-times"></i></a>
         </article>
         <article class="light-box" id="image2">
-            <img src="img/certificado.png" alt="">
+            <img src="img/certcss.png" alt="">
             <a href="#image1" class="next"><i class="fas fa-chevron-circle-left"></i></a>
             <a href="#image3" class="next"><i class="fas fa-chevron-circle-right"></i></a>
             <a href="#study" class="close"><i class="fas fa-times"></i></a>
         </article>
         <article class="light-box" id="image3">
-            <img src="img/certificado.png" alt="">
+            <img src="img/certjs.png" alt="">
             <a href="#image2" class="next"><i class="fas fa-chevron-circle-left"></i></a>
             <a href="#image4" class="next"><i class="fas fa-chevron-circle-right"></i></a>
             <a href="#study" class="close"><i class="fas fa-times"></i></a>
         </article>
         <article class="light-box" id="image4">
-            <img src="img/certificado.png" alt="">
+            <img src="img/certreact.png" alt="">
             <a href="#image3" class="next"><i class="fas fa-chevron-circle-left"></i></a>
+            <a href="#image5" class="next"><i class="fas fa-chevron-circle-right"></i></a>
+            <a href="#study" class="close"><i class="fas fa-times"></i></a>
+        </article>
+        <article class="light-box" id="image5">
+            <img src="img/certnode.png" alt="">
+            <a href="#image4" class="next"><i class="fas fa-chevron-circle-left"></i></a>
             <a href="#image1" class="next"><i class="fas fa-chevron-circle-right"></i></a>
             <a href="#study" class="close"><i class="fas fa-times"></i></a>
         </article>
