--- a/index.html
+++ b/index.html
@@ -80,22 +80,27 @@
                  <!-- <h2 class="Study_title">Estudios</h2> -->
                 <div class="Study-bg">
                     <a href="#image1" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certhtml.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image2" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certcss.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image3" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certjs.png" alt="">
                     </a>
                 </div>
                 <div class="Study-bg">
                     <a href="#image4" class="Study__certificate">
-                        <img src="img/certificado.png" alt="">
+                        <img src="img/certreact.png" alt="">
+                    </a>
+                </div>
+                <div class="Study-bg">
+                    <a href="#image5" class="Study__certificate">
+                        <img src="img/certnode.png" alt="">
                     </a>
                 </div>
                
@@ -103,26 +108,32 @@
             <a href="certificates.html" class="btn__certificate">Ver certificados</a>
             
             <article class="light-box" id="image1">
-                <a href="#image4" class="next"><i class="fas fa-chevron-circle-left"></i></a>
-                <img src="img/certificado.png" alt="">
+                <a href="#image5" class="next"><i class="fas fa-chevron-circle-left"></i></a>
+                <img src="img/certhtml.png" alt="">
                 <a href="#image2" class="next"><i class="fas fa-chevron-circle-right"></i></a>
                 <a href="#study" class="close"><i class="fas fa-times"></i></a>
             </article>
             <article class="light-box" id="image2">
                 <a href="#image1" class="next"><i class="fas fa-chevron-circle-left"></i></a>
-                <img src="img/certificado.png" alt="">
+                <img src="img/certcss.png" alt="">
                 <a href="#image3" class="next"><i class="fas fa-chevron-circle-right"></i></a>
                 <a href="#study" class="close"><i class="fas fa-times"></i></a>
             </article>
             <article class="light-box" id="image3">
                 <a href="#image2" class="next"><i class="fas fa-chevron-circle-left"></i></a>
-                <img src="img/certificado.png" alt="">
+                <img src="img/certjs.png" alt="">
                 <a href="#image4" class="next"><i class="fas fa-chevron-circle-right"></i></a>
                 <a href="#study" class="close"><i class="fas fa-times"></i></a>
             </article>
             <article class="light-box" id="image4">
                 <a href="#image3" class="next"><i class="fas fa-chevron-circle-left"></i></a>
-                <img src="img/certificado.png" alt="">
+                <img src="img/certreact.png" alt="">
+                <a href="#image5" class="next"><i class="fas fa-chevron-circle-right"></i></a>
+                <a href="#study" class="close"><i class="fas fa-times"></i></a>
+            </article>
+            <article class="light-box" id="image5">
+                <a href="#image4" class="next"><i class="fas fa-chevron-circle-left"></i></a>
+                <img src="img/certnode.png" alt="">
                 <a href="#image1" class="next"><i class="fas fa-chevron-circle-right"></i></a>
                 <a href="#study" class="close"><i class="fas fa-times"></i></a>
             </article>
