--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </div>
             <div class="Footer__contact">
                 <div class="Footer__title"><h2>Contacto</h2></div>
-                <form class="Form" id="form" name="contact" netlify>
+                <form method="POST" class="Form" id="form" name="contact" netlify>
                     <p class="warnings-off" id="warnings">Campo incorrecto, vuelva a intentarlo</p>
                     <input type="text" placeholder="Nombre" class="Form__field" id="name" required>
                     <input type="email" placeholder="E-mail" class="Form__field" id="email" required>
