--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                 <div class="Footer__title"><h2>Contacto</h2></div>
                 <form method="POST" class="Form" id="form" name="contact" netlify>
                     <p class="warnings-off" id="warnings">Campo incorrecto, vuelva a intentarlo</p>
-                    <input type="text" placeholder="Nombre" class="Form__field" id="name" required>
-                    <input type="email" placeholder="E-mail" class="Form__field" id="email" required>
+                    <input type="text" name="name" placeholder="Nombre" class="Form__field" id="name" required>
+                    <input type="email" name="email" placeholder="E-mail" class="Form__field" id="email" required>
                     <textarea name="" id="" cols="30" rows="10" class="message" id="message" required></textarea>
                     <input type="submit" class="btn__send" value="ENVIAR">
                     
