--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <p class="warnings-off" id="warnings">Campo incorrecto, vuelva a intentarlo</p>
                     <input type="text" name="name" placeholder="Nombre" class="Form__field" id="name" required>
                     <input type="email" name="email" placeholder="E-mail" class="Form__field" id="email" required>
-                    <textarea name="" id="" cols="30" rows="10" class="message" id="message" required></textarea>
+                    <textarea name="message" id="" cols="30" rows="10" class="message" id="message" required></textarea>
                     <input type="submit" class="btn__send" value="ENVIAR">
                     
                 </form>
