--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <section id="about" class="About">
             <div class="container__about">
                 <img src="img/profilecv.jpg" alt="" class="About__img">
-                <p class="About__description"><span>Mi nombre es Rodrigo Pérez, soy de Buenos Aires, Argentina.</span><br>
-                    Soy un apasionado de la programación, el desarrollo y el diseño web, con ganas de aprender y superar nuevos desafíos. Me encuentro en constante formación con interés en aprender nuevas tecnologías. 
+                <p class="About__description"><span>Soy de Buenos Aires, Argentina.</span><br>
+                    Soy un apasionado de la programación, el desarrollo y el diseño web, con ganas de aprender y superar nuevos desafíos. Me encuentro en constante formación con interés en dominar nuevas tecnologías. 
                     Realicé cursos en EducacionIT, de los cuales se pueden ver los certificados debajo.
                     
                 </p>
