--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Bienvenido a mi Portafolio</title>
+    <title>Bienvenido a mi Portfolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;600&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
                 </p>
             </div>
             <span class="Hat"><i class="fas fa-graduation-cap"></i></span>
-            <h2 class="Study_title">Estudios</h2>
+            <h2 class="Study_title">Certificaciones</h2>
             <div class="container__about-study" id="study">
                  <!-- <h2 class="Study_title">Estudios</h2> -->
                 <div class="Study-bg">
@@ -105,7 +105,7 @@
                 </div>
                
             </div>
-            <a href="certificates.html" class="btn__certificate">Ver certificados</a>
+            <a href="certificates.html" class="btn__certificate">Ver diplomas</a>
             
             <article class="light-box" id="image1">
                 <a href="#image5" class="next"><i class="fas fa-chevron-circle-left"></i></a>
