--- a/projects.html
+++ b/projects.html
@@ -23,25 +23,25 @@
     <main class="Main__projects">
         <section class="Projects">
             <div class="container__projects">
-                <img src="img/gestoria.png" alt="" class="projects__img">
+                <img src="img/turismo.png" alt="" class="projects__img">
                 <div class="icon__text">
-                    <img src="img/html.png" alt="">
                     <img src="img/css.png" alt="">
-                    <img src="img/js.png" alt="">
+                    <img src="img/react.png" alt="">
+                    <!-- <img src="img/js.png" alt=""> -->
                 </div>
                 <div class="projects__text">
-                    <h3 class="wrapper__title">Gestoría</h3>    
-                    <p class="wrapper__p">Página web sobre una gestoría-escribanía, el proyecto fue hecho con HTML5, CSS3 y Javascript Vanilla.
+                    <h3 class="wrapper__title">Turismo</h3>    
+                    <p class="wrapper__p">Página web simple de turismo, el proyecto fue hecho con ReactJs.
                     </p>
-                    <a href="#" class="git">
+                    <a href="https://github.com/rodrigo0109/webturismo.git" class="git">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="#" class="web">
+                    <a href="https://distracted-murdock-c66104.netlify.app" class="web">
                         <i class="fas fa-globe"></i>
                     </a>
                 </div>
             </div>
-            <div class="container__projects">
+           <!--  <div class="container__projects">
                 <img src="img/seattle.png" alt="" class="projects__img">
                 <div class="icon__text">
                     <img src="img/html.png" alt="">
@@ -59,8 +59,8 @@
                         <i class="fas fa-globe"></i>
                     </a>
                 </div>
-            </div>
-            <div class="container__projects">
+            </div> -->
+           <!--  <div class="container__projects">
                 <img src="img/seattle.png" alt="" class="projects__img">
                 <div class="icon__text">
                     <img src="img/html.png" alt="">
@@ -78,8 +78,8 @@
                         <i class="fas fa-globe"></i>
                     </a>
                 </div>
-            </div>
-            <div class="container__projects">
+            </div> -->
+           <!--  <div class="container__projects">
                 <img src="img/seattle.png" alt="" class="projects__img">
                 <div class="icon__text">
                     <img src="img/html.png" alt="">
@@ -97,7 +97,7 @@
                         <i class="fas fa-globe"></i>
                     </a>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
     <footer class="Footer">
