--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <img src="img/js.png" alt="" class="Skills__wrapper-img">
                     <h2 class="Skills__wrapper-title">JS</h2>
                     <p class="Skills__wrapper-text">Intermedio</p>
-                    <p class="Skills__wrapper-text">Fetch, AJAX. Promise, Clases constructoras</p>
+                    <p class="Skills__wrapper-text">Fetch, AJAX. Promise</p>
                 </div>
                 <div class="Skills__wrapper">
                     <img src="img/react.png" alt="" class="Skills__wrapper-img">
@@ -183,7 +183,7 @@
                 <div class="container__projects-wrapper">
                     <div class="Wrapper__img">
                         <a>
-                            <img src="img/gestoria.png" alt="">
+                            <img src="img/red_social.png" alt="">
                         </a>
                     </div>
                     <div class="Wrapper__text">
@@ -192,14 +192,14 @@
                             <img src="img/css.png" alt="">
                             <img src="img/js.png" alt="">
                         </div>
-                        <h3 class="wrapper__title">Gestoría</h3>
+                        <h3 class="wrapper__title">Red social</h3>
                         
-                        <p class="wrapper__p">Página web sobre una gestoría-escribanía, el proyecto fue hecho con HTML5, CSS3 y Javascript Vanilla.
+                        <p class="wrapper__p">Simulación de red social realizada con HTML5, CSS3 y Javascript.
                         </p>
-                        <a href="https://github.com/rodrigo0109/gestoria.git" class="git">
+                        <a href="https://github.com/rodrigo0109/Red_social.git" class="git" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://gestorialopez.netlify.app" class="web" target="_blank">
+                        <a href="https://youthful-goldwasser-5557a0.netlify.app" class="web" target="_blank">
                             <i class="fas fa-globe"></i>
                         </a>
                     </div>
@@ -207,22 +207,22 @@
                 <div class="container__projects-wrapper container__projects-wrapper--modifier">
                     <div class="Wrapper__text">
                         <div class="icon__text">
-                            <img src="img/html.png" alt="">
+                            <!-- <img src="img/html.png" alt=""> -->
                             <img src="img/css.png" alt="">
-                            <img src="img/js.png" alt="">
+                            <img src="img/react.png" alt="">
                         </div>
-                        <h3 class="wrapper__title">Servicio Técnico</h3>
-                        <p class="wrapper__p">Página web sobre un negocio de venta y reparación de celulares, el proyecto fue hecho con HTML5, CSS3 y Javascript Vanilla.</p>
-                        <a href="https://github.com/rodrigo0109/servicio_tecnico.git" class="git">
+                        <h3 class="wrapper__title">Turismo</h3>
+                        <p class="wrapper__p">Página web simple de turismo, el proyecto fue hecho con ReactJs.</p>
+                        <a href="https://github.com/rodrigo0109/webturismo.git" class="git" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://cgserviciotecnico.netlify.app" class="web" target="_blank">
+                        <a href="https://distracted-murdock-c66104.netlify.app" class="web" target="_blank">
                             <i class="fas fa-globe"></i>
                         </a>
                     </div>
                     <div class="Wrapper__img">
                         <a>
-                            <img src="img/servicio_tecnico.png" alt="">
+                            <img src="img/turismo.png" alt="">
                         </a>
                     </div>
                 </div>
