--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,15 @@
     <main class="Main__projects">
         <section class="Projects">
             <div class="container__projects">
-                <img src="img/turismo.png" alt="" class="projects__img">
+                <img src="img/gestoria.png" alt="" class="projects__img">
                 <div class="icon__text">
+                    <img src="img/html.png" alt="">
                     <img src="img/css.png" alt="">
-                    <img src="img/react.png" alt="">
-                    <!-- <img src="img/js.png" alt=""> -->
+                    <img src="img/js.png" alt="">
                 </div>
                 <div class="projects__text">
-                    <h3 class="wrapper__title">Turismo</h3>    
-                    <p class="wrapper__p">Página web simple de turismo, el proyecto fue hecho con ReactJs.
+                    <h3 class="wrapper__title">Gestoría</h3>    
+                    <p class="wrapper__p">Página web sobre una gestoría-escribanía, el proyecto fue hecho con HTML5, CSS3 y Javascript Vanilla.
                     </p>
                     <a href="https://github.com/rodrigo0109/webturismo.git" class="git">
                         <i class="fab fa-github"></i>
